xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__let.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run(\"let $x := 1 return $x + 2\")"
---
Ok(
    Atomic(
        Integer(
            3,
        ),
    ),
)
