xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__let_nested.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run(\"let $x := 1, $y := $x + 3 return $y + 5\")"
---
Ok(
    Atomic(
        Integer(
            9,
        ),
    ),
)
