xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__let_on_right_side.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run(\"1 + (let $x := 2 return $x + 10)\")"
---
Ok(
    One(
        Atomic(
            Integer(
                Integer,
                13,
            ),
        ),
    ),
)
