xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__let_uses_own_variable.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run(\"let $x := $x return $x\")"
---
Err(
    UndefinedName {
        src: "let $x := $x return $x",
        span: SourceSpan {
            offset: SourceOffset(
                10,
            ),
            length: SourceOffset(
                2,
            ),
        },
    },
)
