xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__local_name_empty.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run(\"fn:local-name(())\")"
---
Ok(
    Atomic(
        String(
            "",
        ),
    ),
)
