xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__namespace_uri_element.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run_xml(r#\"<doc xmlns=\"http://example.com/\" xmlns:e=\"http://example.com/e\"><a/><b><e:c/></b></doc>\"#,\n    \"descendant::* / fn:namespace-uri()\")"
---
Ok(
    Sequence {
        stack_value: Many(
            [
                Atomic(
                    String(
                        "http://example.com/",
                    ),
                ),
                Atomic(
                    String(
                        "http://example.com/",
                    ),
                ),
                Atomic(
                    String(
                        "http://example.com/",
                    ),
                ),
                Atomic(
                    String(
                        "http://example.com/e",
                    ),
                ),
            ],
        ),
    },
)
