xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__nested_for_loop.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run(\"for $i in (10, 20, 30), $j in (1, 2) return $i + $j\")"
---
Ok(
    Many(
        [
            Atomic(
                Integer(
                    Integer,
                    11,
                ),
            ),
            Atomic(
                Integer(
                    Integer,
                    12,
                ),
            ),
            Atomic(
                Integer(
                    Integer,
                    21,
                ),
            ),
            Atomic(
                Integer(
                    Integer,
                    22,
                ),
            ),
            Atomic(
                Integer(
                    Integer,
                    31,
                ),
            ),
            Atomic(
                Integer(
                    Integer,
                    32,
                ),
            ),
        ],
    ),
)
