xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__nested_for_loop_variable_scope.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run(\"for $i in (10, 20), $j in ($i + 1, $i + 2) return $i + $j\")"
---
Ok(
    Many(
        [
            Atomic(
                Integer(
                    Integer,
                    21,
                ),
            ),
            Atomic(
                Integer(
                    Integer,
                    22,
                ),
            ),
            Atomic(
                Integer(
                    Integer,
                    41,
                ),
            ),
            Atomic(
                Integer(
                    Integer,
                    42,
                ),
            ),
        ],
    ),
)
